# Personal_Projects

./: README.md
C++_Project/: CMakeLists.txt  README.md
C++_Project/client/: client.cpp  defines.h
C++_Project/client/gui/: AppWidget.cpp  AppWidget.h  LoginDialog.cpp  LoginDialog.h  NotificationControlWidget.cpp  NotificationControlWidget.h  Noty.cpp  Noty.h
C++_Project/server/: server.cpp
C++_Project/server/resources/: users.txt
C++_Project/server/resources/noty/: admin.txt  test.txt  user1.txt
C++_Project/server/resources/noty/shared/: notys.txt
C++_Project/server/util/: RuntimeThread.cpp  RuntimeThread.h  Socket.h  defines.h
C++_WarIn8/: README.md
Java_Project/: README.md  commands.sql  const.py  pom.xml
Java_Project/src/main/java/Main/: DiscordBot.java
Java_Project/src/main/java/botcommands/: BotCommands.java  Commands.java
Java_Project/src/main/java/botlisteners/: BotListeners.java  GuildMemberJoin.java
Java_Project/src/main/java/database/: Command.java  CommandDAO.java  DAO.java  JDBCConnection.java
Python_Project/: README.md  main.py
